# haomnilogic-local

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  config_flow.py  const.py  coordinator.py  errors.py  hacs.json  light.py  manifest.json  mypy.ini  pyproject.toml  sensor.py  shell.nix  sonar-project.properties  switch.py  types.py  utils.py  water_heater.py
.github/: copilot-instructions.md  lint.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml  release.yaml  validate.yaml
custom_components/omnilogic_local/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  errors.py  light.py  manifest.json  number.py  quality_scale.yaml  sensor.py  strings.json  switch.py  types.py  utils.py  valve.py  water_heater.py
custom_components/omnilogic_local/tests/: __init__.py  conftest.py  test_config_flow.py
custom_components/omnilogic_local/translations/: en.json
custom_components/omnilogic_local/types/: __init__.py  entity_index.py  mspconfig.py  telemetry.py
script/: sync_dependencies.py
scripts/: check-manifest-version.sh
tests/: conftest.py  test_config_flow.py
translations/: en.json
